force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Answer__c/TimeTrade_SF1__TimeTrade_Workflow_Answer__c.object-meta.xml
<CustomObject>
    <label>TimeTrade Routing Answer</label>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TimeTrade Routing Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>