force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Answer__c/fields/TimeTrade_SF1__TimeTrade_Workflow_Criteria__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__TimeTrade_Workflow_Criteria__c</fullName>
    <label>TimeTrade Routing Question</label>
    <referenceTo>TimeTrade_SF1__TimeTrade_Workflow_Criteria__c</referenceTo>
    <relationshipLabel>TimeTrade Routing Answers</relationshipLabel>
    <relationshipName>TimeTrade_Schedule_Workflow_Answers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>