force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Answer__c/fields/TimeTrade_SF1__TimeTrade_Workflow_Route__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__TimeTrade_Workflow_Route__c</fullName>
    <label>TimeTrade Routing Route</label>
    <referenceTo>TimeTrade_SF1__TimeTrade_Workflow_Route__c</referenceTo>
    <relationshipLabel>TimeTrade Routing Answers</relationshipLabel>
    <relationshipName>TimeTrade_Workflow_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>