force-app/main/default/objects/TimeTrade_SF1__TimeTrade_Workflow_Answer__c/fields/TimeTrade_SF1__Values__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Values__c</fullName>
    <description>A set of newline-delimited values that qualify as matching answers for this route for a criterium.</description>
    <inlineHelpText>A single value or a list of values.  One value per line.</inlineHelpText>
    <label>Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>